// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerticalCardLayout matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mdc-card mdc-card--global-override single-post-card single-post-basic"
      >
        <div
          class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
          tabindex="0"
        >
          <div
            class="single-post-card__primary"
          >
            <h2
              class="single-post-card__title title-large"
            >
              <div>
                Test Title
              </div>
            </h2>
            <h3
              class="single-post-card__subtitle label-small"
            >
              <time
                datetime="2020-02-25 08:20:38"
              >
                February 25, 2020
              </time>
            </h3>
          </div>
          <div
            class="mdc-card__media mdc-card__media--16-9 single-post-card__media single-post-card-with-text-above-media"
            style="background-image: url(http://example.com/test.jpg);"
          />
          <div
            class="single-post-card__secondary single-post-card__secondary-text-above-media body-medium"
          >
            <div>
              This is a test excerpt
            </div>
          </div>
        </div>
        <div
          class="mdc-card__actions"
        >
          <div
            class="mdc-card__action-buttons"
          >
            <button
              class="mdc-button mdc-card__action mdc-card__action--button mdc-button__post-author"
            >
              <span
                class="mdc-button__ripple"
              />
              <i
                aria-hidden="true"
                class="material-icons mdc-button__icon"
              >
                face
              </i>
              <span
                class="mdc-button__label"
              >
                Test user
              </span>
            </button>
            <button
              class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
            >
              <span
                class="mdc-button__ripple"
              />
              <i
                aria-hidden="true"
                class="material-icons mdc-button__icon"
              >
                comment
              </i>
              <span
                class="mdc-button__label"
              >
                1
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card mdc-card--global-override single-post-card single-post-basic"
    >
      <div
        class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
        tabindex="0"
      >
        <div
          class="single-post-card__primary"
        >
          <h2
            class="single-post-card__title title-large"
          >
            <div>
              Test Title
            </div>
          </h2>
          <h3
            class="single-post-card__subtitle label-small"
          >
            <time
              datetime="2020-02-25 08:20:38"
            >
              February 25, 2020
            </time>
          </h3>
        </div>
        <div
          class="mdc-card__media mdc-card__media--16-9 single-post-card__media single-post-card-with-text-above-media"
          style="background-image: url(http://example.com/test.jpg);"
        />
        <div
          class="single-post-card__secondary single-post-card__secondary-text-above-media body-medium"
        >
          <div>
            This is a test excerpt
          </div>
        </div>
      </div>
      <div
        class="mdc-card__actions"
      >
        <div
          class="mdc-card__action-buttons"
        >
          <button
            class="mdc-button mdc-card__action mdc-card__action--button mdc-button__post-author"
          >
            <span
              class="mdc-button__ripple"
            />
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon"
            >
              face
            </i>
            <span
              class="mdc-button__label"
            >
              Test user
            </span>
          </button>
          <button
            class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
          >
            <span
              class="mdc-button__ripple"
            />
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon"
            >
              comment
            </i>
            <span
              class="mdc-button__label"
            >
              1
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`VerticalCardLayout matches snapshot when the card should be outlined 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mdc-card mdc-card--global-override single-post-card single-post-basic"
      >
        <div
          class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
          tabindex="0"
        >
          <div
            class="single-post-card__primary"
          >
            <h2
              class="single-post-card__title title-large"
            >
              <div>
                Test Title
              </div>
            </h2>
            <h3
              class="single-post-card__subtitle label-small"
            >
              <time
                datetime="2020-02-25 08:20:38"
              >
                February 25, 2020
              </time>
            </h3>
          </div>
          <div
            class="mdc-card__media mdc-card__media--16-9 single-post-card__media single-post-card-with-text-above-media"
            style="background-image: url(http://example.com/test.jpg);"
          />
          <div
            class="single-post-card__secondary single-post-card__secondary-text-above-media body-medium"
          >
            <div>
              This is a test excerpt
            </div>
          </div>
        </div>
        <div
          class="mdc-card__actions"
        >
          <div
            class="mdc-card__action-buttons"
          >
            <button
              class="mdc-button mdc-card__action mdc-card__action--button mdc-button__post-author"
            >
              <span
                class="mdc-button__ripple"
              />
              <i
                aria-hidden="true"
                class="material-icons mdc-button__icon"
              >
                face
              </i>
              <span
                class="mdc-button__label"
              >
                Test user
              </span>
            </button>
            <button
              class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
            >
              <span
                class="mdc-button__ripple"
              />
              <i
                aria-hidden="true"
                class="material-icons mdc-button__icon"
              >
                comment
              </i>
              <span
                class="mdc-button__label"
              >
                1
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card mdc-card--global-override single-post-card single-post-basic"
    >
      <div
        class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
        tabindex="0"
      >
        <div
          class="single-post-card__primary"
        >
          <h2
            class="single-post-card__title title-large"
          >
            <div>
              Test Title
            </div>
          </h2>
          <h3
            class="single-post-card__subtitle label-small"
          >
            <time
              datetime="2020-02-25 08:20:38"
            >
              February 25, 2020
            </time>
          </h3>
        </div>
        <div
          class="mdc-card__media mdc-card__media--16-9 single-post-card__media single-post-card-with-text-above-media"
          style="background-image: url(http://example.com/test.jpg);"
        />
        <div
          class="single-post-card__secondary single-post-card__secondary-text-above-media body-medium"
        >
          <div>
            This is a test excerpt
          </div>
        </div>
      </div>
      <div
        class="mdc-card__actions"
      >
        <div
          class="mdc-card__action-buttons"
        >
          <button
            class="mdc-button mdc-card__action mdc-card__action--button mdc-button__post-author"
          >
            <span
              class="mdc-button__ripple"
            />
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon"
            >
              face
            </i>
            <span
              class="mdc-button__label"
            >
              Test user
            </span>
          </button>
          <button
            class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
          >
            <span
              class="mdc-button__ripple"
            />
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon"
            >
              comment
            </i>
            <span
              class="mdc-button__label"
            >
              1
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`VerticalCardLayout matches snapshot when the content layout is "Text over Media" and the featured image should not be displayed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mdc-card mdc-card--global-override single-post-card single-post-basic"
      >
        <div
          class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
          tabindex="0"
        >
          <div
            class="single-post-card__primary"
          >
            <h2
              class="single-post-card__title title-large"
            >
              <div>
                Test Title
              </div>
            </h2>
            <h3
              class="single-post-card__subtitle label-small"
            >
              <time
                datetime="2020-02-25 08:20:38"
              >
                February 25, 2020
              </time>
            </h3>
          </div>
          <div
            class="single-post-card__secondary single-post-card__secondary-text-over-media body-medium"
          >
            <div>
              This is a test excerpt
            </div>
          </div>
        </div>
        <div
          class="mdc-card__actions"
        >
          <div
            class="mdc-card__action-buttons"
          >
            <button
              class="mdc-button mdc-card__action mdc-card__action--button mdc-button__post-author"
            >
              <span
                class="mdc-button__ripple"
              />
              <i
                aria-hidden="true"
                class="material-icons mdc-button__icon"
              >
                face
              </i>
              <span
                class="mdc-button__label"
              >
                Test user
              </span>
            </button>
            <button
              class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
            >
              <span
                class="mdc-button__ripple"
              />
              <i
                aria-hidden="true"
                class="material-icons mdc-button__icon"
              >
                comment
              </i>
              <span
                class="mdc-button__label"
              >
                1
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card mdc-card--global-override single-post-card single-post-basic"
    >
      <div
        class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
        tabindex="0"
      >
        <div
          class="single-post-card__primary"
        >
          <h2
            class="single-post-card__title title-large"
          >
            <div>
              Test Title
            </div>
          </h2>
          <h3
            class="single-post-card__subtitle label-small"
          >
            <time
              datetime="2020-02-25 08:20:38"
            >
              February 25, 2020
            </time>
          </h3>
        </div>
        <div
          class="single-post-card__secondary single-post-card__secondary-text-over-media body-medium"
        >
          <div>
            This is a test excerpt
          </div>
        </div>
      </div>
      <div
        class="mdc-card__actions"
      >
        <div
          class="mdc-card__action-buttons"
        >
          <button
            class="mdc-button mdc-card__action mdc-card__action--button mdc-button__post-author"
          >
            <span
              class="mdc-button__ripple"
            />
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon"
            >
              face
            </i>
            <span
              class="mdc-button__label"
            >
              Test user
            </span>
          </button>
          <button
            class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
          >
            <span
              class="mdc-button__ripple"
            />
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon"
            >
              comment
            </i>
            <span
              class="mdc-button__label"
            >
              1
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`VerticalCardLayout matches snapshot when the content layout of "Text over media" 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mdc-card mdc-card--global-override single-post-card single-post-basic"
      >
        <div
          class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
          tabindex="0"
        >
          <div
            class="mdc-card__media mdc-card__media--16-9 single-post-card__media single-post-card-with-text-over-media"
            style="background-image: url(http://example.com/test.jpg);"
          >
            <div
              class="mdc-card__media-content"
            >
              <div
                class="single-post-card__primary"
              >
                <h2
                  class="single-post-card__title title-large"
                >
                  <div>
                    Test Title
                  </div>
                </h2>
                <h3
                  class="single-post-card__subtitle label-small"
                >
                  <time
                    datetime="2020-02-25 08:20:38"
                  >
                    February 25, 2020
                  </time>
                </h3>
              </div>
            </div>
          </div>
          <div
            class="single-post-card__secondary single-post-card__secondary-text-over-media body-medium"
          >
            <div>
              This is a test excerpt
            </div>
          </div>
        </div>
        <div
          class="mdc-card__actions"
        >
          <div
            class="mdc-card__action-buttons"
          >
            <button
              class="mdc-button mdc-card__action mdc-card__action--button mdc-button__post-author"
            >
              <span
                class="mdc-button__ripple"
              />
              <i
                aria-hidden="true"
                class="material-icons mdc-button__icon"
              >
                face
              </i>
              <span
                class="mdc-button__label"
              >
                Test user
              </span>
            </button>
            <button
              class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
            >
              <span
                class="mdc-button__ripple"
              />
              <i
                aria-hidden="true"
                class="material-icons mdc-button__icon"
              >
                comment
              </i>
              <span
                class="mdc-button__label"
              >
                1
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card mdc-card--global-override single-post-card single-post-basic"
    >
      <div
        class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
        tabindex="0"
      >
        <div
          class="mdc-card__media mdc-card__media--16-9 single-post-card__media single-post-card-with-text-over-media"
          style="background-image: url(http://example.com/test.jpg);"
        >
          <div
            class="mdc-card__media-content"
          >
            <div
              class="single-post-card__primary"
            >
              <h2
                class="single-post-card__title title-large"
              >
                <div>
                  Test Title
                </div>
              </h2>
              <h3
                class="single-post-card__subtitle label-small"
              >
                <time
                  datetime="2020-02-25 08:20:38"
                >
                  February 25, 2020
                </time>
              </h3>
            </div>
          </div>
        </div>
        <div
          class="single-post-card__secondary single-post-card__secondary-text-over-media body-medium"
        >
          <div>
            This is a test excerpt
          </div>
        </div>
      </div>
      <div
        class="mdc-card__actions"
      >
        <div
          class="mdc-card__action-buttons"
        >
          <button
            class="mdc-button mdc-card__action mdc-card__action--button mdc-button__post-author"
          >
            <span
              class="mdc-button__ripple"
            />
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon"
            >
              face
            </i>
            <span
              class="mdc-button__label"
            >
              Test user
            </span>
          </button>
          <button
            class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
          >
            <span
              class="mdc-button__ripple"
            />
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon"
            >
              comment
            </i>
            <span
              class="mdc-button__label"
            >
              1
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`VerticalCardLayout matches snapshot when the content layout of "Text under media" 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mdc-card mdc-card--global-override single-post-card single-post-basic"
      >
        <div
          class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
          tabindex="0"
        >
          <div
            class="mdc-card__media mdc-card__media--16-9 single-post-card__media single-post-card-with-text-under-media"
            style="background-image: url(http://example.com/test.jpg);"
          />
          <div
            class="single-post-card__primary"
          >
            <h2
              class="single-post-card__title title-large"
            >
              <div>
                Test Title
              </div>
            </h2>
            <h3
              class="single-post-card__subtitle label-small"
            >
              <time
                datetime="2020-02-25 08:20:38"
              >
                February 25, 2020
              </time>
            </h3>
          </div>
          <div
            class="single-post-card__secondary single-post-card__secondary-text-under-media body-medium"
          >
            <div>
              This is a test excerpt
            </div>
          </div>
        </div>
        <div
          class="mdc-card__actions"
        >
          <div
            class="mdc-card__action-buttons"
          >
            <button
              class="mdc-button mdc-card__action mdc-card__action--button mdc-button__post-author"
            >
              <span
                class="mdc-button__ripple"
              />
              <i
                aria-hidden="true"
                class="material-icons mdc-button__icon"
              >
                face
              </i>
              <span
                class="mdc-button__label"
              >
                Test user
              </span>
            </button>
            <button
              class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
            >
              <span
                class="mdc-button__ripple"
              />
              <i
                aria-hidden="true"
                class="material-icons mdc-button__icon"
              >
                comment
              </i>
              <span
                class="mdc-button__label"
              >
                1
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card mdc-card--global-override single-post-card single-post-basic"
    >
      <div
        class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
        tabindex="0"
      >
        <div
          class="mdc-card__media mdc-card__media--16-9 single-post-card__media single-post-card-with-text-under-media"
          style="background-image: url(http://example.com/test.jpg);"
        />
        <div
          class="single-post-card__primary"
        >
          <h2
            class="single-post-card__title title-large"
          >
            <div>
              Test Title
            </div>
          </h2>
          <h3
            class="single-post-card__subtitle label-small"
          >
            <time
              datetime="2020-02-25 08:20:38"
            >
              February 25, 2020
            </time>
          </h3>
        </div>
        <div
          class="single-post-card__secondary single-post-card__secondary-text-under-media body-medium"
        >
          <div>
            This is a test excerpt
          </div>
        </div>
      </div>
      <div
        class="mdc-card__actions"
      >
        <div
          class="mdc-card__action-buttons"
        >
          <button
            class="mdc-button mdc-card__action mdc-card__action--button mdc-button__post-author"
          >
            <span
              class="mdc-button__ripple"
            />
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon"
            >
              face
            </i>
            <span
              class="mdc-button__label"
            >
              Test user
            </span>
          </button>
          <button
            class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
          >
            <span
              class="mdc-button__ripple"
            />
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon"
            >
              comment
            </i>
            <span
              class="mdc-button__label"
            >
              1
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`VerticalCardLayout matches snapshot when the content should not be displayed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mdc-card mdc-card--global-override single-post-card single-post-basic"
      >
        <div
          class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
          tabindex="0"
        >
          <div
            class="single-post-card__primary"
          >
            <h2
              class="single-post-card__title title-large"
            >
              <div>
                Test Title
              </div>
            </h2>
            <h3
              class="single-post-card__subtitle label-small"
            >
              <time
                datetime="2020-02-25 08:20:38"
              >
                February 25, 2020
              </time>
            </h3>
          </div>
          <div
            class="mdc-card__media mdc-card__media--16-9 single-post-card__media single-post-card-with-text-above-media"
            style="background-image: url(http://example.com/test.jpg);"
          />
        </div>
        <div
          class="mdc-card__actions"
        >
          <div
            class="mdc-card__action-buttons"
          >
            <button
              class="mdc-button mdc-card__action mdc-card__action--button mdc-button__post-author"
            >
              <span
                class="mdc-button__ripple"
              />
              <i
                aria-hidden="true"
                class="material-icons mdc-button__icon"
              >
                face
              </i>
              <span
                class="mdc-button__label"
              >
                Test user
              </span>
            </button>
            <button
              class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
            >
              <span
                class="mdc-button__ripple"
              />
              <i
                aria-hidden="true"
                class="material-icons mdc-button__icon"
              >
                comment
              </i>
              <span
                class="mdc-button__label"
              >
                1
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card mdc-card--global-override single-post-card single-post-basic"
    >
      <div
        class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
        tabindex="0"
      >
        <div
          class="single-post-card__primary"
        >
          <h2
            class="single-post-card__title title-large"
          >
            <div>
              Test Title
            </div>
          </h2>
          <h3
            class="single-post-card__subtitle label-small"
          >
            <time
              datetime="2020-02-25 08:20:38"
            >
              February 25, 2020
            </time>
          </h3>
        </div>
        <div
          class="mdc-card__media mdc-card__media--16-9 single-post-card__media single-post-card-with-text-above-media"
          style="background-image: url(http://example.com/test.jpg);"
        />
      </div>
      <div
        class="mdc-card__actions"
      >
        <div
          class="mdc-card__action-buttons"
        >
          <button
            class="mdc-button mdc-card__action mdc-card__action--button mdc-button__post-author"
          >
            <span
              class="mdc-button__ripple"
            />
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon"
            >
              face
            </i>
            <span
              class="mdc-button__label"
            >
              Test user
            </span>
          </button>
          <button
            class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
          >
            <span
              class="mdc-button__ripple"
            />
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon"
            >
              comment
            </i>
            <span
              class="mdc-button__label"
            >
              1
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`VerticalCardLayout matches snapshot when the content, featured image, post author and the comments count should not be displayed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mdc-card mdc-card--global-override single-post-card single-post-basic"
      >
        <div
          class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
          tabindex="0"
        >
          <div
            class="single-post-card__primary"
          >
            <h2
              class="single-post-card__title title-large"
            >
              <div>
                Test Title
              </div>
            </h2>
            <h3
              class="single-post-card__subtitle label-small"
            >
              <time
                datetime="2020-02-25 08:20:38"
              >
                February 25, 2020
              </time>
            </h3>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card mdc-card--global-override single-post-card single-post-basic"
    >
      <div
        class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
        tabindex="0"
      >
        <div
          class="single-post-card__primary"
        >
          <h2
            class="single-post-card__title title-large"
          >
            <div>
              Test Title
            </div>
          </h2>
          <h3
            class="single-post-card__subtitle label-small"
          >
            <time
              datetime="2020-02-25 08:20:38"
            >
              February 25, 2020
            </time>
          </h3>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`VerticalCardLayout matches snapshot when the excerpt is longer than the allowed content length 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mdc-card mdc-card--global-override single-post-card single-post-basic"
      >
        <div
          class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
          tabindex="0"
        >
          <div
            class="single-post-card__primary"
          >
            <h2
              class="single-post-card__title title-large"
            >
              <div>
                Test Title
              </div>
            </h2>
            <h3
              class="single-post-card__subtitle label-small"
            >
              <time
                datetime="2020-02-25 08:20:38"
              >
                February 25, 2020
              </time>
            </h3>
          </div>
          <div
            class="mdc-card__media mdc-card__media--16-9 single-post-card__media single-post-card-with-text-above-media"
            style="background-image: url(http://example.com/test.jpg);"
          />
          <div
            class="single-post-card__secondary single-post-card__secondary-text-above-media body-medium"
          >
            <div>
              This is a test a ...
            </div>
          </div>
        </div>
        <div
          class="mdc-card__actions"
        >
          <div
            class="mdc-card__action-buttons"
          >
            <button
              class="mdc-button mdc-card__action mdc-card__action--button mdc-button__post-author"
            >
              <span
                class="mdc-button__ripple"
              />
              <i
                aria-hidden="true"
                class="material-icons mdc-button__icon"
              >
                face
              </i>
              <span
                class="mdc-button__label"
              >
                Test user
              </span>
            </button>
            <button
              class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
            >
              <span
                class="mdc-button__ripple"
              />
              <i
                aria-hidden="true"
                class="material-icons mdc-button__icon"
              >
                comment
              </i>
              <span
                class="mdc-button__label"
              >
                1
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card mdc-card--global-override single-post-card single-post-basic"
    >
      <div
        class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
        tabindex="0"
      >
        <div
          class="single-post-card__primary"
        >
          <h2
            class="single-post-card__title title-large"
          >
            <div>
              Test Title
            </div>
          </h2>
          <h3
            class="single-post-card__subtitle label-small"
          >
            <time
              datetime="2020-02-25 08:20:38"
            >
              February 25, 2020
            </time>
          </h3>
        </div>
        <div
          class="mdc-card__media mdc-card__media--16-9 single-post-card__media single-post-card-with-text-above-media"
          style="background-image: url(http://example.com/test.jpg);"
        />
        <div
          class="single-post-card__secondary single-post-card__secondary-text-above-media body-medium"
        >
          <div>
            This is a test a ...
          </div>
        </div>
      </div>
      <div
        class="mdc-card__actions"
      >
        <div
          class="mdc-card__action-buttons"
        >
          <button
            class="mdc-button mdc-card__action mdc-card__action--button mdc-button__post-author"
          >
            <span
              class="mdc-button__ripple"
            />
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon"
            >
              face
            </i>
            <span
              class="mdc-button__label"
            >
              Test user
            </span>
          </button>
          <button
            class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
          >
            <span
              class="mdc-button__ripple"
            />
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon"
            >
              comment
            </i>
            <span
              class="mdc-button__label"
            >
              1
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`VerticalCardLayout matches snapshot when the featured image should not be displayed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mdc-card mdc-card--global-override single-post-card single-post-basic"
      >
        <div
          class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
          tabindex="0"
        >
          <div
            class="single-post-card__primary"
          >
            <h2
              class="single-post-card__title title-large"
            >
              <div>
                Test Title
              </div>
            </h2>
            <h3
              class="single-post-card__subtitle label-small"
            >
              <time
                datetime="2020-02-25 08:20:38"
              >
                February 25, 2020
              </time>
            </h3>
          </div>
          <div
            class="single-post-card__secondary single-post-card__secondary-text-above-media body-medium"
          >
            <div>
              This is a test excerpt
            </div>
          </div>
        </div>
        <div
          class="mdc-card__actions"
        >
          <div
            class="mdc-card__action-buttons"
          >
            <button
              class="mdc-button mdc-card__action mdc-card__action--button mdc-button__post-author"
            >
              <span
                class="mdc-button__ripple"
              />
              <i
                aria-hidden="true"
                class="material-icons mdc-button__icon"
              >
                face
              </i>
              <span
                class="mdc-button__label"
              >
                Test user
              </span>
            </button>
            <button
              class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
            >
              <span
                class="mdc-button__ripple"
              />
              <i
                aria-hidden="true"
                class="material-icons mdc-button__icon"
              >
                comment
              </i>
              <span
                class="mdc-button__label"
              >
                1
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card mdc-card--global-override single-post-card single-post-basic"
    >
      <div
        class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
        tabindex="0"
      >
        <div
          class="single-post-card__primary"
        >
          <h2
            class="single-post-card__title title-large"
          >
            <div>
              Test Title
            </div>
          </h2>
          <h3
            class="single-post-card__subtitle label-small"
          >
            <time
              datetime="2020-02-25 08:20:38"
            >
              February 25, 2020
            </time>
          </h3>
        </div>
        <div
          class="single-post-card__secondary single-post-card__secondary-text-above-media body-medium"
        >
          <div>
            This is a test excerpt
          </div>
        </div>
      </div>
      <div
        class="mdc-card__actions"
      >
        <div
          class="mdc-card__action-buttons"
        >
          <button
            class="mdc-button mdc-card__action mdc-card__action--button mdc-button__post-author"
          >
            <span
              class="mdc-button__ripple"
            />
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon"
            >
              face
            </i>
            <span
              class="mdc-button__label"
            >
              Test user
            </span>
          </button>
          <button
            class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
          >
            <span
              class="mdc-button__ripple"
            />
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon"
            >
              comment
            </i>
            <span
              class="mdc-button__label"
            >
              1
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`VerticalCardLayout matches snapshot when the featured image, post author and the comments count should not be displayed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mdc-card mdc-card--global-override single-post-card single-post-basic"
      >
        <div
          class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
          tabindex="0"
        >
          <div
            class="single-post-card__primary"
          >
            <h2
              class="single-post-card__title title-large"
            >
              <div>
                Test Title
              </div>
            </h2>
            <h3
              class="single-post-card__subtitle label-small"
            >
              <time
                datetime="2020-02-25 08:20:38"
              >
                February 25, 2020
              </time>
            </h3>
          </div>
          <div
            class="single-post-card__secondary single-post-card__secondary-text-above-media body-medium"
          >
            <div>
              This is a test excerpt
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card mdc-card--global-override single-post-card single-post-basic"
    >
      <div
        class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
        tabindex="0"
      >
        <div
          class="single-post-card__primary"
        >
          <h2
            class="single-post-card__title title-large"
          >
            <div>
              Test Title
            </div>
          </h2>
          <h3
            class="single-post-card__subtitle label-small"
          >
            <time
              datetime="2020-02-25 08:20:38"
            >
              February 25, 2020
            </time>
          </h3>
        </div>
        <div
          class="single-post-card__secondary single-post-card__secondary-text-above-media body-medium"
        >
          <div>
            This is a test excerpt
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`VerticalCardLayout matches snapshot when the post author and the comments count should not be displayed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mdc-card mdc-card--global-override single-post-card single-post-basic"
      >
        <div
          class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
          tabindex="0"
        >
          <div
            class="single-post-card__primary"
          >
            <h2
              class="single-post-card__title title-large"
            >
              <div>
                Test Title
              </div>
            </h2>
            <h3
              class="single-post-card__subtitle label-small"
            >
              <time
                datetime="2020-02-25 08:20:38"
              >
                February 25, 2020
              </time>
            </h3>
          </div>
          <div
            class="mdc-card__media mdc-card__media--16-9 single-post-card__media single-post-card-with-text-above-media"
            style="background-image: url(http://example.com/test.jpg);"
          />
          <div
            class="single-post-card__secondary single-post-card__secondary-text-above-media body-medium"
          >
            <div>
              This is a test excerpt
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card mdc-card--global-override single-post-card single-post-basic"
    >
      <div
        class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
        tabindex="0"
      >
        <div
          class="single-post-card__primary"
        >
          <h2
            class="single-post-card__title title-large"
          >
            <div>
              Test Title
            </div>
          </h2>
          <h3
            class="single-post-card__subtitle label-small"
          >
            <time
              datetime="2020-02-25 08:20:38"
            >
              February 25, 2020
            </time>
          </h3>
        </div>
        <div
          class="mdc-card__media mdc-card__media--16-9 single-post-card__media single-post-card-with-text-above-media"
          style="background-image: url(http://example.com/test.jpg);"
        />
        <div
          class="single-post-card__secondary single-post-card__secondary-text-above-media body-medium"
        >
          <div>
            This is a test excerpt
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`VerticalCardLayout matches snapshot when there is no featured image for the post 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mdc-card mdc-card--global-override single-post-card single-post-basic"
      >
        <div
          class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
          tabindex="0"
        >
          <div
            class="single-post-card__primary"
          >
            <h2
              class="single-post-card__title title-large"
            >
              <div>
                Test Title
              </div>
            </h2>
            <h3
              class="single-post-card__subtitle label-small"
            >
              <time
                datetime="2020-02-25 08:20:38"
              >
                February 25, 2020
              </time>
            </h3>
          </div>
          <div
            class="single-post-card__secondary single-post-card__secondary-text-above-media body-medium"
          >
            <div>
              This is a test excerpt
            </div>
          </div>
        </div>
        <div
          class="mdc-card__actions"
        >
          <div
            class="mdc-card__action-buttons"
          >
            <button
              class="mdc-button mdc-card__action mdc-card__action--button mdc-button__post-author"
            >
              <span
                class="mdc-button__ripple"
              />
              <i
                aria-hidden="true"
                class="material-icons mdc-button__icon"
              >
                face
              </i>
              <span
                class="mdc-button__label"
              >
                Test user
              </span>
            </button>
            <button
              class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
            >
              <span
                class="mdc-button__ripple"
              />
              <i
                aria-hidden="true"
                class="material-icons mdc-button__icon"
              >
                comment
              </i>
              <span
                class="mdc-button__label"
              >
                1
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-card mdc-card--global-override single-post-card single-post-basic"
    >
      <div
        class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
        tabindex="0"
      >
        <div
          class="single-post-card__primary"
        >
          <h2
            class="single-post-card__title title-large"
          >
            <div>
              Test Title
            </div>
          </h2>
          <h3
            class="single-post-card__subtitle label-small"
          >
            <time
              datetime="2020-02-25 08:20:38"
            >
              February 25, 2020
            </time>
          </h3>
        </div>
        <div
          class="single-post-card__secondary single-post-card__secondary-text-above-media body-medium"
        >
          <div>
            This is a test excerpt
          </div>
        </div>
      </div>
      <div
        class="mdc-card__actions"
      >
        <div
          class="mdc-card__action-buttons"
        >
          <button
            class="mdc-button mdc-card__action mdc-card__action--button mdc-button__post-author"
          >
            <span
              class="mdc-button__ripple"
            />
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon"
            >
              face
            </i>
            <span
              class="mdc-button__label"
            >
              Test user
            </span>
          </button>
          <button
            class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
          >
            <span
              class="mdc-button__ripple"
            />
            <i
              aria-hidden="true"
              class="material-icons mdc-button__icon"
            >
              comment
            </i>
            <span
              class="mdc-button__label"
            >
              1
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
